# render_internship

./: .gitignore  .gitmodules  README.md
homework-1/: .gitignore  CMakeLists.txt  main.cpp  sln_generator.bat
homework-1/engine/inc/: controller.hpp  engine.hpp  math.hpp  sphere.hpp  window.hpp
homework-1/engine/src/: controller.cpp  engine.cpp  main.cpp  math.cpp  scene.cpp  sphere.cpp  window.cpp
homework-2/: CMakeLists.txt
homework-2/engine/inc/: camera.hpp  colored_plane.hpp  colored_sphere.hpp  colored_triangle.hpp  controller.hpp  cube.hpp  intersection.hpp  light.hpp  material.hpp  math.hpp  matrices.hpp  object_mover.hpp  plane.hpp  ray.hpp  scene.hpp  sphere.hpp  triangle.hpp  window.hpp
homework-2/engine/inc/math/: cube.hpp  intersection.hpp  sphere.hpp  triangle.hpp
homework-2/engine/src/: camera.cpp  colored_plane.cpp  colored_sphere.cpp  colored_triangle.cpp  controller.cpp  cube.cpp  intersection.cpp  light.cpp  main.cpp  material.cpp  matrices.cpp  object_mover.cpp  plane.cpp  ray.cpp  scene.cpp  sphere.cpp  triangle.cpp  window.cpp
homework-2/engine/src/math/: cube.cpp  matrices.cpp  sphere.cpp
project/: CMakeLists.txt  cmake_build_vs2022_64.bat  sln_generator.bat
project/engine/: camera.cpp  camera.hpp  controller.cpp  controller.hpp  main.cpp  material.cpp  material.hpp  parallel_executor.cpp  parallel_executor.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
project/engine/assets/: cubemap.dds  decal_normal.dds  dissolve.dds  noise.dds  prototype.dds  spark.dds
project/engine/assets/copper/: copper_albedo.dds  copper_normal.dds  copper_roughness.dds
project/engine/assets/environment/: irradiance.dds  reflectance.dds
project/engine/assets/floor/: tile_albedo.dds  tile_normal.dds  tile_roughness.dds
project/engine/assets/leather/: leather_albedo.dds  leather_normal.dds  leather_roughness.dds
project/engine/assets/rusted_iron/: rusted_iron_albedo.dds  rusted_iron_metallic.dds  rusted_iron_normal.dds  rusted_iron_roughness.dds
project/engine/assets/smoke/: lightmap_BotBF.dds  lightmap_RLT.dds  smoke.dds  smoke.tga
project/engine/assets/space/: space_albedo.dds  space_metallic.dds  space_normal.dds  space_roughness.dds
project/engine/assets/stone/: bricks_albedo.dds  bricks_normal.dds  bricks_roughness.dds
project/engine/assets/swamp/: albedo.dds  normal.dds  roughness.dds
project/engine/math/: constants.hpp  cube.cpp  cube.hpp  euler_angles.cpp  euler_angles.hpp  hemisphere_ray_generation.cpp  hemisphere_ray_generation.hpp  matrices.cpp  matrices.hpp  plane.cpp  plane.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
project/engine/render/: .#window.hpp  d3d.cpp  d3d.hpp  dx_res_ptr.hpp  globals.cpp  globals.hpp  shader.cpp  shader.hpp  shader_includer.cpp  shader_manager.cpp  shader_manager.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  window.cpp  window.hpp
project/engine/shaders/: copy_ms_depth.hlsl  cube.hlsl  decals.hlsl  deferred.hlsl  disappear.hlsl  dissolve.hlsl  emissive.hlsl  floor.hlsl  gaussian_blur.hlsl  globals.hlsl  grass.hlsl  grass_shadow_cubemap.hlsl  lighting.hlsl  math.hlsl  opaque.hlsl  particles.hlsl  post_processing.hlsl  render_sparks.hlsl  resolve.hlsl  shader.frag  shader.hlsl  shader.vert  shadow_cubemap.hlsl  skybox.hlsl  spawn_sparks.hlsl  update_ring_buffer.hlsl  update_sparks.hlsl
project/engine/source/: .#scene.cpp  additional.cpp  additional.hpp  camera.cpp  camera.hpp  controller.cpp  controller.hpp  main.cpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  timer.cpp  timer.hpp  transform_system.cpp  transform_system.hpp
project/engine/source/math/: box.hpp  constants.hpp  euler_angles.cpp  euler_angles.hpp  hemisphere_ray_generation.cpp  matrices.cpp  mesh_intersection.hpp  plane.hpp  random.cpp  random.hpp  ray.cpp  ray.hpp  solid_vector.hpp  sphere.cpp  triangle_octree.cpp  triangle_octree.hpp
project/engine/source/render/: .#mesh_system.cpp  .#model.cpp  decal.cpp  decal.hpp  decal_system.cpp  decal_system.hpp  disappear_instances.cpp  disappear_instances.hpp  dissolution_instances.cpp  dissolution_instances.hpp  dx_res_ptr.hpp  emissive_instances.cpp  emissive_instances.hpp  engine.cpp  engine.hpp  floor.cpp  floor.hpp  globals.cpp  globals.hpp  grass.cpp  grass.hpp  grass_field.cpp  grass_field.hpp  grass_system.cpp  grass_system.hpp  index_buffer.cpp  index_buffer.hpp  light_system.cpp  light_system.hpp  mesh_system.cpp  mesh_system.hpp  model.cpp  model.hpp  model_manager.cpp  model_manager.hpp  opaque_instances.cpp  opaque_instances.hpp  particle.cpp  particle.hpp  particle_system.cpp  (+25 more)
project/engine/window/: main.cpp
project/textures/: brick.dds  neon_grid.dds  prototype_grid.dds  rubik_cube.dds  skybox_sunset.dds
project/textures/skybox/: negx.dds  negy.dds  negz.dds  posx.dds  posy.dds  posz.dds
